--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "private": true,
   "bin": {
-    "logo": "dist/theme-cli.js"
+    "theme": "dist/theme-cli.js"
   },
   "scripts": {
     "build": "bun build scripts/theme-cli.ts --outdir dist --target bun"
